# fancy-dataclass

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  TODO.md  TODO.txt  mkdocs.yml  pyproject.toml  ruff.toml  setup.py  summarize.sh  vermin.ini
.github/workflows/: mypy.yml  workflow.yml
docs/: .changelog-version-regex.txt  CHANGELOG.md  README.md  cli.md  config.md  func.md  gen_ref_pages.py  index.md  json.md  mixin.md  sql.md  subprocess.md  toml.md  versioned.md
docs/stylesheets/: extra.css
fancy_dataclass/: __init__.py  _dataclass.py  cli.py  config.py  dataclass.py  dict.py  func.py  json.py  mixin.py  serialize.py  settings.py  sql.py  subprocess.py  toml.py  utils.py  versioned.py
fancy_dataclass/docs/: 404.html  CHANGELOG.html  LICENSE.txt  cli.html  config.html  func.html  gen_ref_pages.py  index.html  json.html  mixin.html  objects.inv  sitemap.xml  sql.html  subprocess.html  toml.html
fancy_dataclass/docs/reference/: SUMMARY.html  cli.html  config.html  dict.html  func.html  json.html  mixin.html  serialize.html  settings.html  sql.html  subprocess.html  toml.html  utils.html
fancy_dataclass/docs/stylesheets/: extra.css
scripts/: check_version.py  summarize.sh
tests/: test_cli.py  test_combined.py  test_config.py  test_dict.py  test_func.py  test_inheritance.py  test_json.py  test_mixin.py  test_serializable.py  test_sql.py  test_subprocess.py  test_utils.py  test_versioned.py
